Add main site text.

--- a/public/index.html
+++ b/public/index.html
@@ -12,6 +12,32 @@
 </head>
 
 <body>
+	<div id="grid">
+		<header class="banner">
+			<div class="logotype">DEMAND PROGRESS</div>
+		</header>
+
+		<h1>Bill To Text</h1>
+
+		<main>
+			<section id="front-matter">
+				<p>BillToText.com turns PDFs of federal legislation into text files. 
+					It provides a formatted document that you can download and edit with a word processor program.
+				</p>
+				<p>To use, upload your bill. BillToText publishes the bill text in your browser 
+					and allows you to download it as a .DOCX file. If you open the file in 
+					Microsoft Word, BillToText preserves the line numbers on each page. 
+					You can open it as a Google doc as well, although Google does not support line numbers.
+				</p>
+				<p>BillToText is designed specifically for discussion drafts of legislation prepared by 
+					legislative counsel in the U.S. Senate or House of Representatives.
+				</p>
+				<p>We do not retain or share copies of legislation uploaded to the website. We do use Google analytics 
+					to track general information about users of the website. (Here is our privacy policy).
+				</p>
+			</section>
+		</main>
+	</div>
 	<script src='bundle.js'></script>
 </body>
 </html>
