Layout & style changes.

--- a/public/index.html
+++ b/public/index.html
@@ -14,10 +14,10 @@
 <body>
 	<div id="grid">
 		<header class="banner">
-			<div class="logotype">DEMAND PROGRESS</div>
+			<div class="logotype">BillToText</div>
+			<a href="about">About</a>
 		</header>
 
-		<h1>Bill To Text</h1>
 
 		<main>
 			<section id="front-matter">
@@ -37,6 +37,9 @@
 				</p>
 			</section>
 		</main>
+		<footer class="attribution">
+			Made with 💖 &amp; 🤔 for <span class="logotype">Demand Progress</span> by Ted Han &amp; the Bad Idea Factory.
+		</footer>		
 	</div>
 	<script src='bundle.js'></script>
 </body>
