Add an about pane.

--- a/public/index.html
+++ b/public/index.html
@@ -15,10 +15,33 @@
 	<div id="grid">
 		<header class="banner">
 			<div class="logotype">BillToText</div>
-			<a href="about">About</a>
+			<a href="#">About</a>
 		</header>
 
-
+		<div id="about-wrapper" class="hidden">
+			<div id="about">
+				<h2>About BillToText</h2>
+				<p>We designed BillToText to make it easier for congressional staff to have 
+						conversations around legislation. We have two major use cases in mind. 
+						First, we want to make it easier for a congressional office to collaborate 
+						with other offices and receive feedback from stakeholders. 
+						Second, we want to make it easier for users to identify changes in draft 
+						legislation by comparing multiple versions.</p>
+		
+				<p>BillToText is a project of <a href="https://demandprogresseducationfund.org/#/">the Demand Progress Education Fund</a>, a project of 
+						the New Venture Fund. The website is free to use and the code is open source 
+						and <a href="https://github.com/badideafactory/demand-editable-drafts">available online</a>. We encourage everyone to make use of and adapt the code, 
+						and we impose no requirements on its reuse. Please report bugs to 
+						<a href="https://github.com/DanielSchuman/demand-editable-drafts">our GitHub account</a> 
+						and send comments to <a href="mailto:daniel@demandprogress.org">daniel@demandprogress.org</a></p>
+			
+				<p>The website was built by <a href="https://knowtheory.net">Ted Han</a> of <a href="https://biffud.com">the Bad Idea Factory</a>. 
+						He did a great job, as you can see.
+				</p>
+			
+				<p>We <a href="https://secure.actblue.com/contribute/page/crsreports">welcome your donations</a> to keep this website running.</p>
+			</div>
+		</div>
 		<main>
 			<section id="front-matter">
 				<p>BillToText.com turns PDFs of federal legislation into text files. 
@@ -33,7 +56,7 @@
 					legislative counsel in the U.S. Senate or House of Representatives.
 				</p>
 				<p>We do not retain or share copies of legislation uploaded to the website. We do use Google analytics 
-					to track general information about users of the website. (Here is our privacy policy).
+					to track general information about users of the website. (Here is <a href="https://demandprogress.org/privacy-policy/">our privacy policy</a>).
 				</p>
 			</section>
 		</main>
